maze.lessons.maze.island.IslandMaze.scala.error
Escaper:7: error: ')' expected but 'while' found.
		while (!estFaceMur())  {
                ^