maze.lessons.maze.island.IslandMaze.scala.code
override def run() {
  while (!estSurBiscuit()) {
    while (!(getDirection() = Direction.NORTH) {
      droite();
    }
		while (!estFaceMur())  {
   		avance();
		}
    keepHandOnSideWall()
	}
  prendBiscuit()
}


def keepHandOnSideWall() { 
    gauche();
  	if (estFaceMur()) {
    droite();
      if (!estFaceMur()) {
        avance();
      } else droite()
    } else {
    	avance();
    }
}

def murGauche() {
  var res = false;
  gauche();
  if (estFaceMur()) {
    res = true
  }
  droite
  return res
}
